mini-pascal/test_cases/bad/Example2.pas
Program Example2
(* COMMENTS *)
Begin
	Writeln('Hello World. Prepare to learn PASCAL!!');
	Readln;
End.